# ResumeGPT

./: match miss score for step 3.txt  skill extractor for step 4.txt  skill list for step 4.txt  skill weight for step5.txt  step1 basic.txt  step2 after jd included.txt  step3 match miss score.txt  step4 skill gap analysis.txt  step5explainable ai.txt  step7 resume score breakdown.txt
ai project/: main.py  pyproject.toml  test.py
